--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -145,6 +145,8 @@
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width() / 1.7777);
+						$('#vid1').css("height", $('#vid').width() / 1.5);
+						$('#vid3').css("height", $('#vid').width() / 1.5);
 
 					}
 					$(resizeDivs);
@@ -155,13 +157,27 @@
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
-					<small>Created by Jake Elwes and Me the Drag Queen<br>
+					<small>Created by Jake Elwes and Me the Drag Queen,
 						Performance - <a id="show" target="_blank"
-							href="https://www.instagram.com/methedragqueen/">Me</a> <br>
+							href="https://www.instagram.com/methedragqueen/">Me</a>,
 						Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a>
 					</small></small>
 
-				<br>
+				<br><br><br>
+
+	
+				
+				<iframe class="half"   height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+				<iframe class="half"  height="360" src="https://www.youtube.com/embed/G0dUoGUOTAw"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<br><small>Zizi & Me - Live at Gazelli Art House, 29th July 2021<br>
+				<small>Get Happy/Happy Days Are Here Again (extract) - Judy Garland and Barbra Streisand<br>
+				Me and My Shadow (extract) - Frank Sinatra and Sammy Davis Jr </small></small>
+
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
