--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -167,11 +167,11 @@
 
 	
 				
-				<iframe class="half"   height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
+				<iframe class="half"  style="padding-right: 5%;" height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-				<iframe class="half"  height="360" src="https://www.youtube.com/embed/G0dUoGUOTAw"
+				<iframe class="half" height="360" src="https://www.youtube.com/embed/G0dUoGUOTAw"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<br><small>Zizi & Me - Live at Gazelli Art House, 29th July 2021<br>
