--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -64,7 +64,7 @@
 	</script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	
+
 
 
 </head>
@@ -108,7 +108,8 @@
 								website and play with which deepfake bodies perform which songs. At times this breaks
 								down when the A.I. tries to conceive impossible positions or combines multiple different
 								queer identities; it can even reveal the skeleton tracking the deepfake is built on.
-								The deepfakes were created collaboratively in celebration, resisting the exploitative and oppressive nature of deepfakes.
+								The deepfakes were created collaboratively in celebration, resisting the exploitative
+								and oppressive nature of deepfakes.
 								The Zizi Show constructs and then deconstructs a virtual cabaret that pushes the limits
 								of what can be imagined on a digital stage.
 							</p>
@@ -246,13 +247,16 @@
 				</script>
 
 
+				<a id="show" target="_blank" href="https://zizi.ai/"><img 
+						src="images/project-zizi-show/amalgams.jpg" style="width:100%;  border-radius: 25px;"
+						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
+				<br><br>
+
 
 				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/3c5-ABUkI_M"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/full.jpg"
-						style="width:100%; " alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
@@ -276,14 +280,10 @@
 				<small>Welcome to The Zizi Show</small><br><br> -->
 
 				<iframe id="vid3" width="100%" height="360" src="https://www.youtube.com/embed/Ngpr2lUS1Bk"
-				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<small>The Zizi Show - I Am What I Am</small><br>
 
-
-				<img class="border-top" src="images/project-zizi-show/amalgams.jpg" style="width:100%; "
-					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
-				<br><small>The Zizi Show (2020), montage of deepfake drag artists</small>
 
 				<img src="images/project-zizi-show/banner.jpg" style="width:100%; "
 					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
