--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -256,6 +256,7 @@
 				<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/3c5-ABUkI_M"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<small>Making of The Zizi Show - Jake Elwes discusses Deepfake Drag</small><br><br>
 
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
@@ -274,15 +275,15 @@
 
 				<br><small>The Zizi Show (2020), stills from zizi.ai</small><br><br>
 
-				<!-- <iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/E8iYStsLF_Y"
 				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small>Welcome to The Zizi Show</small><br><br> -->
+				<small>Welcome to The Zizi Show (performed by ME the Drag Queen)</small><br><br> 
 
 				<iframe id="vid3" width="100%" height="360" src="https://www.youtube.com/embed/Ngpr2lUS1Bk"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small>The Zizi Show - I Am What I Am</small><br>
+				<small>The Zizi Show - I Am What I Am (performed by ME the Drag Queen)</small><br>
 
 
 				<img src="images/project-zizi-show/banner.jpg" style="width:100%; "
