--- a/about.html
+++ b/about.html
@@ -160,10 +160,10 @@
 
 				<p style="margin-top:0px;">
 
-					Jake Elwes is a media artist living and working in London. He studied at The Slade School of Fine
-					Art, UCL (2013-17). Recent works explore his research into machine learning and artificial
-					intelligence. His practice looks for poetry and narrative in the success and failures of these
-					systems, while also investigating and questioning the code and ethics behind them. His current works
+					Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
+					Art, UCL (2013-17). Recent works explore their research into machine learning and artificial
+					intelligence. Their practice looks for poetry and narrative in the success and failures of these
+					systems, while also investigating and questioning the code and ethics behind them. Their current works
 					in the Zizi Project explore AI bias by queering datasets with drag performers. They simultaneously
 					demystify and subvert AI systems.
 
@@ -183,7 +183,7 @@
 					Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; New
 					Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral
 					Centro, Spain; Nature Morte, Delhi, India; RMIT Gallery, Australia; Centre for the Future of
-					Intelligence, UK and he has been featured on TV: ZDF aspekte (Germany) and the BBC Arts (UK).
+					Intelligence, UK and they have been featured on TV: ZDF aspekte (Germany) and the BBC Arts (UK).
 
 				</p>
 
