--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
 					Art, UCL (2013-17). Recent works explore their research into machine learning and artificial
 					intelligence. Their practice looks for poetry and narrative in the success and failures of these
 					systems, while also investigating and questioning the code and ethics behind them. Their current works
-					in the Zizi Project explore AI bias by queering datasets with drag performers. They simultaneously
+					in the Zizi Project explore AI bias by queering datasets with drag performers which simultaneously
 					demystify and subvert AI systems.
 
 					<!-- Jake is an artist living and working in London. His recent works have looked
