--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -96,8 +96,8 @@
 
 							<p>
 								‘Zizi & Me’ is a double act between drag queen 'ME the Drag Queen', and a deepfake (A.I.)
-								clone of 'ME the Drag Queen'. We trained a neural network<small>*</small> on filmed footage.
-								This network learnt to construct a virtual body that can be controlled by feeding it new
+								clone of 'ME the Drag Queen'. By training a neural network<small>*</small> on filmed footage
+								this network learnt to construct a virtual body that can be controlled by feeding it new
 								reference movements. The first act 'Anything You Can Do (I Can Do Better)’ satirizes the idea that an AI is something that we might mistake for a human. Through drag performance, we aim to use cabaret and
 								musical theatre to challenge narratives surrounding A.I. and society. 
 
