--- a/about.html
+++ b/about.html
@@ -213,7 +213,7 @@
 				<br><br>
 				<a id=show target="_blank"
 					href="http://www.contemporaryartsociety.org/news/artist-to-watch/jake-elwes/">Contemporary Art
-					Socierty</a> |
+					Society</a> |
 				<a id=show target="_blank" href="https://zkm.de/en/person/jake-elwes">ZKM</a> |
 				<a id=show target="_blank" href="https://aiartists.org/jake-elwes">AI Artists</a> |
 				<a id=show target="_blank"
