--- a/about.html
+++ b/about.html
@@ -163,7 +163,8 @@
 					Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
 					Art, UCL (2013-17). Recent works explore their research into machine learning and artificial
 					intelligence. Their practice looks for poetry and narrative in the success and failures of these
-					systems, while also investigating and questioning the code and ethics behind them. Their current works
+					systems, while also investigating and questioning the code and ethics behind them. Their current
+					works
 					in the Zizi Project explore AI bias by queering datasets with drag performers which simultaneously
 					demystify and subvert AI systems.
 
@@ -192,13 +193,13 @@
 							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a>, 39
 						Dover Street, Mayfair London
 					</b></p>
-					<p>
+				<p>
 					Gazelli Art House <br>
 					<a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
-					class="btn-social btn-outline">info@gazelliarthouse.com</a>
+						class="btn-social btn-outline">info@gazelliarthouse.com</a>
 					<br>+ 44 207 491 8816
-					</p>
-					<p>
+				</p>
+				<p>
 					Other Enquiries:
 
 					<a id="show" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
@@ -786,6 +787,10 @@
 
 					<h4>Interviews</h4>
 					<p>
+						<a id=show target="_blank" href="/interviews/Ideat China.pdf">'Interview, IDEAT China 理想家, 2021. (PDF)</a> <br>
+						<a id=show target="_blank" href="/interviews/Flash Art.pdf">'Interview, Alex Estorick &amp; Beth
+							Jochim,
+							Flash Art, 2020. (PDF)</a> <br>
 						<a id=show target="_blank"
 							href="https://cdn.zabludowiczcollection.com/files/FINAL_ZC_Invites-Leaftlet_Jake-Elwes_Digital.pdf">'CUSP',
 							Zabludowicz: Interview with Jake Elwes and Curator Maitreyi Maheshwari, 2019. (PDF)</a> <br>
