--- a/about.html
+++ b/about.html
@@ -188,17 +188,17 @@
 
 				</p>
 
-				<p><b>
-						Currently represented in Europe, Middle East & Asia by <a id=show target="_blank"
-							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a>, 39
-						Dover Street, Mayfair London
-					</b></p>
 				<p>
-					Gazelli Art House <br>
-					<a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
-						class="btn-social btn-outline">info@gazelliarthouse.com</a>
-					<br>+ 44 207 491 8816
-				</p>
+						Currently represented in Europe, Middle East & Asia by:<br>
+						<b><a id=show target="_blank"
+							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli</a></b>
+							<br> 39 Dover Street, <br>
+							Mayfair London <br>
+							<a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
+							class="btn-social btn-outline">info@gazelliarthouse.com</a> / sales enquiries
+						<br>+44 207 491 8816
+					</p>
+
 				<p>
 					Other Enquiries:
 
