--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -1,9 +1,11 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
 
 	<!-- Basic Page Needs
@@ -12,7 +14,8 @@
 	<title>Jake Elwes - Machine Learning Porn</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
-	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
+	<meta http-equiv="Content-Security-Policy"
+		content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src 'self' http://* 'unsafe-inline' 'unsafe-eval'" />
 
 
 	<!-- Mobile Specific Metas
@@ -50,16 +53,18 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-40831263-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-40831263-1', 'auto');
+		ga('send', 'pageview');
 
-</script>
+	</script>
 
 </head>
 
@@ -67,7 +72,7 @@
 
 
 	<nav id="navMenu"></nav>
-<script src="header.js"></script>
+	<script src="header.js"></script>
 
 
 	<!-- Work - Single Page (Left Sidebar)
@@ -85,16 +90,35 @@
 							<h3 class="border-top">Machine learning porn</h3>
 							<p class="project-desc">2016, digital video, 12 minute loop</p>
 							<p>
-							<br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
-<br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies. <br>Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>, the machine learning researcher who originally discovered the technique.
+								<!-- <br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
+<br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.  -->
 
-<br><br>
-<small><small>
-	1) Synthesizing the preferred inputs for neurons in neural networks via deep generator networks (2016)<br>
-	2) Not Suitable for Work (NSFW) classification using deep neural network Caffe models (2016)
-</small></small>
+								Machine Learning Porn visualises an AI’s pornographic ruminations.
+								<br><br>
+								Yahoo trained a neural network* to flag and censor sexual imagery from the internet. It
+								learnt by being fed a dataset of thousands of graphic images, independently working out
+								what they had in common making them explicit. This neural network was then reverse
+								engineered to create the most pornographic imagery from a computer's perspective. 
+								<br><br>
+								Morphing between the yonic and the phallic, the images created are not gendered in a
+								binary sense. They flow through the queer spaces between identity, gender, bodies and
+								sexuality.<br><br>
 
-						</p>
+							</p>
+							<p style="line-height: 1.2rem;">
+								<small><small>
+										*Not Suitable for Work (NSFW)
+										classification using deep neural network Caffe models (Yahoo, 2016)
+										and visualisations using Synthesizing the preferred inputs for neurons in neural
+										networks via deep generator networks (Nguyen, 2016).
+										Inspiration and permission from <a id="show"
+											href="http://gabgoh.github.io">Gabriel
+											Goh</a>, the machine learning researcher who originally discovered the
+										pairing
+										technique.
+									</small></small>
+
+							</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -107,11 +131,13 @@
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
+			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0"
+					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+					allowfullscreen></iframe>
 				<br></br>
 
 				<script>
@@ -137,9 +163,9 @@
 
 
 
-		<nav id="footer"></nav>
+	<nav id="footer"></nav>
 
-		<script src="header.js"></script>
+	<script src="header.js"></script>
 	<!-- JS
 	================================================== -->
 	<!--
@@ -156,7 +182,8 @@
 	<script src="js/jquery.custom.js"></script>
 
 
-<!-- End Document
+	<!-- End Document
 ================================================== -->
 </body>
+
 </html>
