--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -97,7 +97,7 @@
 								<br><br>
 								Yahoo trained a neural network* to flag and censor sexual imagery from the internet. It
 								learnt by being fed a dataset of thousands of graphic images, independently working out
-								what they had in common making them explicit. This neural network was then reverse
+								what they had in common to make them explicit. This neural network was then reverse
 								engineered to create the most pornographic imagery from a computer's perspective. 
 								<br><br>
 								Morphing between the yonic and the phallic, the images created are not gendered in a
