--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -111,7 +111,7 @@
 										classification using deep neural network Caffe models (Yahoo, 2016)
 										and visualisations using Synthesizing the preferred inputs for neurons in neural
 										networks via deep generator networks (Nguyen, 2016).
-										Inspiration and permission from <a id="show"
+										Inspiration from <a id="show"
 											href="http://gabgoh.github.io">Gabriel
 											Goh</a>, the machine learning researcher who originally discovered the
 										pairing
