--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -119,7 +119,7 @@
 									</small></small>
 
 							</p>
-						</div><!-- // .box-info -->
+						</div>
 
 					</div><!-- // .desktop-3 -->
 
