--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -87,7 +87,7 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Machine learning porn</h3>
+							<h3 class="border-top">Machine Learning Porn</h3>
 							<p class="project-desc">2016, digital video, 12 minute loop</p>
 							<p>
 								<!-- <br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
