--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -81,7 +81,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">dada da ta</h3>
-							<p class="project-desc">2016, Digital Video, 20 minute loop
+							<p class="project-desc">2016, Digital Video with audio, 20 minute loop
 </p>
 
 							<p>In 'dada da ta' over 50 hours of video interviews with leading figures in the global tech industry have been transcribed using the IBM Watson AI speech to text programme. A custom-made computer programme then identified the instances when the participants spoke using numbers. It then abstracts these words from the source videos, leaving the interview’s chronology intact yet reduced to a stream of numbers:  <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
