--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -86,7 +86,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Closed Loop</h3>
-							<p class="project-desc">2017, 2-channel digital video, 200 minute loop
+							<p class="project-desc">2017, 2-channel digital video without sound, 200 minute loop
 							</p>
 
 							<p>
