--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -90,7 +90,8 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Latent Space</h3>
-							<p class="project-desc">2017, digital video, 45 minute loop (2021 iteration - 6 hour loop)
+							<p class="project-desc">2017, digital video without audio, 45 minute loop
+								<br>2021 iteration, digital video with sound, 6 hour loop
 							</p>
 
 							<p>
