--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -90,7 +90,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi - Queering the Dataset</h3>
-							<p class="project-desc">2019, multi-channel digital video, 135 minute loop
+							<p class="project-desc">2019, multi-channel digital video without audio, 135 minute loop
 							</p>
 
 							<p>
