--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -88,7 +88,8 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Machine Learning Porn</h3>
-							<p class="project-desc">2016, digital video, 12 minute loop</p>
+							<p class="project-desc">2016, digital video without audio, 12 minute loop <br>
+							2021 version, digital video with sound, 5 minutes 23 seconds</p>
 							<p>
 								<!-- <br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
 <br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.  -->
