--- a/about.html
+++ b/about.html
@@ -732,7 +732,7 @@
 					<h4>Interview PDFs (for reference purposes)</h4>
 					<p>
 						<a id=show target="_blank" href="/interviews/Wallpaper China.pdf">Wallpaper China, 2021. (PDF)</a> <br>
-						<a id=show target="_blank" href="/interviews/Ideat China.pdf">IDEAT China 理想家, 2021. (PDF in Chinese and English)</a> <br>
+						<a id=show target="_blank" href="/interviews/NOWRE Interview.pdf">NOWRE China, 2021. (PDF)</a> <br>
 						<a id=show target="_blank" href="/interviews/Flash Art.pdf">Alex Estorick &amp; Beth Jochim, Flash Art, 2020. (PDF)</a> <br>
 						<a id=show target="_blank"
 							href="/interviews/Zabs Invites.pdf">'CUSP',
