--- a/footer.html
+++ b/footer.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="desktop-3 columns">
 
-      <p>Copyright &copy; <a class="italic">Jake Elwes 2016<p id="copyright"><p>
+      <p>Copyright &copy; <a class="italic">Jake Elwes 2015 - present<p id="copyright"><p>
     </a></p>
     </div><!-- // .desktop-3 -->
   </div><!-- // .container -->
