added hash link

--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -102,6 +102,7 @@
 				<img src="images/project-digitalTouch/Phone.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
 				<img src="images/project-digitalTouch/Camera.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
 				<img src="images/project-digitalTouch/Tinder.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
+				<small>Phone Call, Camera, Tinder (left to right)</small>
 				<br><br>
 
 				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
