--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -91,7 +91,7 @@
 						<div class="box-info">
 							<h3 class="border-top">Latent Space</h3>
 							<p class="project-desc">2017, digital video without audio, 45 minute loop
-								<br>2021 iteration, digital video with sound, 6 hour loop
+								<br>2021 iteration, digital video with audio, 6 hour loop
 							</p>
 
 							<p>
@@ -150,7 +150,7 @@
 					allowfullscreen></iframe>
 				<br>
 
-
+<!-- 
 				<p><small>Installlation for <a id=show target="_blank"
 							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture In The City,
 							2021.</a></small></p>
@@ -159,7 +159,7 @@
 							Girl</a> was commissioned in partnership with <a id=show target="_blank"
 							href="https://www.mscty.space/project/latent-space">MSCTY</a> x <a id=show target="_blank"
 							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture in the
-							City.</a></small></p>
+							City.</a></small></p> -->
 
 				<img src="images/project-latentSpace/Latent Space 2021 Sculpture in the city.jpg"
 					alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
@@ -170,8 +170,19 @@
 					src="images/project-latentSpace/Latent Space 2021 Sculpture in the city portrait 2.jpeg"
 					alt="Jake Elwes digital artist Latent Space 2021 Sculpture in the city" />
 
-				<br><br>
 
+				<p><small>Installlation for <a id=show target="_blank"
+					href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture In The City,
+					2021.</a></small></p>
+		<p style="margin-top: 10px;"><small>For this 6 hour iteration, a new soundscape by <a id=show
+					target="_blank" href="https://open.spotify.com/artist/4PK6Yoxg2Ba8C2KQbysQkM">The Analog
+					Girl</a> was commissioned in partnership with <a id=show target="_blank"
+					href="https://www.mscty.space/project/latent-space">MSCTY</a> x <a id=show target="_blank"
+					href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Sculpture in the
+					City.</a></small></p>
+
+
+					<br>
 
 
 
@@ -179,16 +190,19 @@
 					  <source src="images/project-latentSpace/latentSpace.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
 					</video> -->
-					<h3 class="border-top" style="padding-bottom: 15px;">2021 Iteration | soundscape by The Analog Girl</h3>
+					<!-- <h3 class="border-top" style="padding-bottom: 15px;">2021 Iteration | soundscape by The Analog Girl</h3> -->
 
 					<iframe id="vid21" src="https://player.vimeo.com/video/563521786?&loop=1&title=0&byline=0&portrait=0"
 					width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 					allowfullscreen></iframe>
 
+					<small>2021 Iteration | soundscape by The Analog Girl</small>
+
 
 				<br>
 				<br>
 				<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
+
 
 				<!-- <img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" /> -->
 				<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
