--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -88,8 +88,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Machine Learning Porn</h3>
-							<p class="project-desc">2016, digital video without audio, 12 minute loop <br>
-							2021 version, digital video with audio, 5 minutes 23 seconds</p>
+							<p class="project-desc">2016, digital video with audio, 5 minutes 23 seconds</p>
 							<p>
 								<!-- <br>A convolutional neural network<small><sub>1</sub></small> was trained using Yahoo’s explicit content model for identifying pornography<small><sub>2</sub></small>, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
 <br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.  -->
@@ -147,7 +146,7 @@
 				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0"
 				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 				allowfullscreen></iframe>
-				<br><small>Machine Learning Porn (silent verson)</small>
+				<br><small>Machine Learning Porn (silent)</small>
 			<br>
 
 				<script>
