--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -142,18 +142,12 @@
 				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0"
 				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 				allowfullscreen></iframe>
-				<br><small>Machine Learning Porn (silent)</small>
-			<br>
 
-			<iframe id="vid1" width="100%" height="360" src="https://www.youtube.com/embed/xeF7ZFwpvnY"
-			frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-			webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<br><small>Machine Learning Porn (with audio)</small>
-			<br>
-			
+				<br><small>Machine Learning Porn with audio - <a id="show" href-"https://youtu.be/xeF7ZFwpvnY">watch on youtube</a></small>
+			<br><br>
+
 				<script>
 					function resizeDivs() {
-						$('#vid1').css("height", $('#vid1').width());
 						$('#vid2').css("height", $('#vid2').width());
 
 					}
