added hash link

--- a/about.html
+++ b/about.html
@@ -209,7 +209,9 @@
 
 
 				<!-- <br>Download: <a id=show target="_blank" href="JElwes-CV.pdf">CV PDF</a> -->
-				<br>Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show
+				<br>Download: 
+				<!-- <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> |  -->
+				<a id=show
 					target="_blank" href="JElwes-CV.pdf">CV PDF</a>
 				<br><br>
 				<a id=show target="_blank"
