added hash link

--- a/about.html
+++ b/about.html
@@ -275,14 +275,16 @@
 					<p>
 						Born 1993, London UK. <br><br>
 
+						<b>Visiting Lecturer</b>, Slade School of Fine Art (UCL), 2021 - present<br>
 						<b>Slade School of Fine Art (UCL)</b>, BA (Hons) - Fine Art, 2013 - 2017<br>
 						<b>School of the Art Institute Chicago</b>, International Exchange - Art &amp;
 						Technology, 2015 <br>
-						<b>Central St Martins (UAL)</b>, Foundation, 2012 - 2013<br><br>
+						<b>Central St Martins (UAL)</b>, Foundation, 2012 - 2013<br>
+						<br>
+						<b>Gazelli Art House</b>, 39 Dover St, London, 2021 - present<br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery,
 						London), 2017 - 2019<br><br>
-						<b>Visiting Lecturer</b>, Slade School of Fine Art (UCL), 2021 -<br><br>
-					</p>
+					</p> 
 
 
 					<h4>Current/Upcoming Shows</h4>
