--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -143,7 +143,7 @@
 				width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
 				allowfullscreen></iframe>
 
-				<br><small>Machine Learning Porn with audio - <a id="show" href-"https://youtu.be/xeF7ZFwpvnY">watch on youtube</a></small>
+				<br><br> <a id=show target="_blank" href="https://youtu.be/xeF7ZFwpvnY">&#9658; Watch Machine Learning Porn with audio on YouTube</a>
 			<br><br>
 
 				<script>
