--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<div class="item">
 						<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>The Zizi Show </h3>
+						<h3>The Zizi Show</h3>
 			</a>
 
 			<span style="display:block" class="category">interactive performance, 2020 - <a style="white-space:nowrap" id="show"
@@ -213,18 +213,16 @@
 			</div>
 		</a>
 
-
-		<a href="project-latentSpace.html" class="permalink">
+		<a href="project-oakComputer.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
 				<div class="item">
-					<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-oakComputer.jpg" alt="Jake Elwes digital artist" />
 
-					<h3>Latent Space</h3>
-					<span class="category">video, 2017</span>
-				</div><!-- // .item -->
-			</div><!-- // .desktop-4 -->
+					<h3>O(a)k Computer</h3>
+					<span class="category">video &amp; print series, 2019 (ongoing)</span>
+				</div>
+			</div>
 		</a>
-
 
 
 		<a href="project-closedLoop.html" class="permalink">
@@ -238,7 +236,20 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
+		
 		<div class="clear hide-under-tablet"></div>
+
+
+		<a href="project-latentSpace.html" class="permalink">
+			<div class="desktop-4 tablet-6 columns">
+				<div class="item">
+					<img src="images/project-latentSpace.jpg" alt="Jake Elwes digital artist" />
+
+					<h3>Latent Space</h3>
+					<span class="category">video, 2017</span>
+				</div><!-- // .item -->
+			</div><!-- // .desktop-4 -->
+		</a>
 
 
 		<a href="project-DaDaTa.html" class="permalink">
@@ -267,6 +278,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
+		<div class="clear hide-under-tablet"></div>
 
 
 		<a href="project-AutoEncodedBuddha.html" class="permalink">
@@ -280,7 +292,6 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-		<div class="clear hide-under-tablet"></div>
 
 
 		<a href="project-MLPorn.html" class="permalink">
@@ -307,6 +318,8 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
+		<div class="clear hide-under-tablet"></div>
+
 
 		<a href="project-circuit.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -319,7 +332,6 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-		<div class="clear hide-under-tablet"></div>
 
 
 		<a href="project-iPhoneTouch.html" class="permalink">
@@ -346,6 +358,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
+		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-lineForWalk.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -359,7 +372,6 @@
 		</a>
 
 
-		<div class="clear hide-under-tablet"></div>
 
 		<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
