--- a/project-oakComputer.html
+++ b/project-oakComputer.html
@@ -214,7 +214,7 @@
 				<iframe id="vid3" width="100%" height="360" src="https://www.youtube.com/embed/sctBIb10p80"
 					frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 					webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				<small><i>O(a)k Computer - scanned 20/12/2020 <br> accompanied by A.I. trained to churn out Hans Zimmer
+				<small><i>O(a)k Computer - scanned 20/12/2020 <br> accompanied by A.I. trained on Hans Zimmer
 						soundtracks</i>, 2021</small>
 
 
