--- a/about.html
+++ b/about.html
@@ -190,19 +190,14 @@
 
 				<p>
 						Currently represented in Europe, Middle East & Asia by:<br>
-						<b><a id=show target="_blank"
-							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli</a></b>
-							<br> 39 Dover Street, <br>
-							Mayfair London <br>
-							<a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
-							class="btn-social btn-outline">info@gazelliarthouse.com</a> / sales enquiries
-						<br>+44 207 491 8816
-					</p>
-
-				<p>
-					Other Enquiries:
-
-					<a id="show" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
+						<b><i><a id=show target="_blank"
+							href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli</a></b>, 39 Dover Street, Mayfair, London </i><br>
+						+44 207 491 8816
+						</p><p>
+						Sales Enquiries | <a id="show" href="mailto:info@gazelliarthouse.com?Subject=Contact" target="_top"
+						class="btn-social btn-outline">info@gazelliarthouse.com</a>
+						<br>
+						Other Enquiries | <a id="show" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact"
 						onmouseover="this.href=this.href.replace(/x/g,'');" target="_top"
 						class="btn-social btn-outline">Artist Email</a>
 				</p>
@@ -281,7 +276,7 @@
 						Technology, 2015 <br>
 						<b>Central St Martins (UAL)</b>, Foundation, 2012 - 2013<br>
 						<br>
-						<b>Gazelli Art House</b>, 39 Dover St, London, 2021 - present<br>
+						<b>Gazelli Art House</b>, 39 Dover Street, London, 2021 - present<br>
 						<b>The Artist Development Agency</b>, Steve Fletcher (formally Carroll / Fletcher Gallery,
 						London), 2017 - 2019<br><br>
 					</p> 
