--- a/news.html
+++ b/news.html
@@ -218,7 +218,7 @@
 						</blockquote>
 						<iframe class="news" src="https://www.youtube.com/embed/7UvzxiU3OB8" frameborder="0"
 							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/5kS59JagNFY?autoplay=1><img src=https://img.youtube.com/vi/5kS59JagNFY/hqdefault.jpg><span>▶</span></a>"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/7UvzxiU3OB8?autoplay=1><img src=https://img.youtube.com/vi/7UvzxiU3OB8/hqdefault.jpg><span>▶</span></a>"
 							allowfullscreen></iframe>
 						<br>
 						A short while ago Me the drag queen and I featured on German National TV!
