--- a/about.html
+++ b/about.html
@@ -19,6 +19,11 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<meta property="og:image" content="https://www.jakeelwes.com/images/Jake%20Elwes2.jpg">
+	<meta name="twitter:site" content="@jakeelwes" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/images/Jake%20Elwes2.jpg" />
+
+
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
 	* typegrid.css				- Responsive grid system
@@ -32,7 +37,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	</style>
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
 
 
 	<!--[if lt IE 8]>
