--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -17,6 +17,10 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<meta property="og:image" content="https://www.jakeelwes.com/images/project-digitalTouch.jpg">
+	<meta name="twitter:site" content="@jakeelwes" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-digitalTouch.jpg" />
+
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
 	* typegrid.css				- Responsive grid system
