--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<meta property="og:image" content="https://www.jakeelwes.com/images/project-zizi-show.jpg">
+	<meta name="twitter:site" content="@jakeelwes" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi-show.jpg" />
+
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
 	* typegrid.css				- Responsive grid system
@@ -236,7 +240,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-		
+
 		<div class="clear hide-under-tablet"></div>
 
 
