--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@
 
 						<br>
 
-						<b>2021 - Summer 2022</b> - <a id=show target="_blank"
+						<b>2021 - May 2022</b> - <a id=show target="_blank"
 							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Latent Space at 120
 							Fencurch Street,
 						</a><b>Sculpture in the City, </b>City of London’s
