--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 			<div class="desktop-4 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
 				<a href="about.html" class="btn-social btn-outline">
-					<p>ABOUT &amp; SHOWS</p>
+					<p>ABOUT &amp; EXHIBITIONS</p>
 				</a>
 
 				<!-- <a href="about.html" class="btn-social btn-outline"><p>ABOUT<i class="fa fa-fw fa-eye" style="padding-left: 10px;font-size: 17px;"></i></p></a> -->
@@ -283,7 +283,7 @@
 					</p>
 
 
-					<h4>Current/Upcoming Shows</h4>
+					<h4>Current/Upcoming Exhibtions</h4>
 					<p>
 
 						<b>March 2022 - July 2022</b> - <a id=show target="_blank"
@@ -296,9 +296,12 @@
 							MedienKunstVerein),</b> Dortmund, Germany<br>
 
 						<b>May 2022 - July 2022</b> - <a id=show target="_blank"
-							href="https://www.hmkv.de/exhibition/exhibition-detail/house-of-mirrors-artificial-intelligence-as-phantasm.html">Biomedia
+							href="https://www.cda95.fr/fr/agenda/biomedia-0">Biomedia
 							(touring)</a>, <b>Centre des Arts d'Enghien-les-Bains,</b> Enghien-les-Bains / Paris,
 						France<br>
+
+						<b>2nd - 26th June 2022</b> - <a id=show target="_blank"
+						href="https://www.getxophoto.com/en/2022-edition/artists/jake-elwes/">The Zizi Show</a>, <b>GETXOPHOTO International Image Festival</b>, Getxo, Basque Country, Spain<br>
 
 						<br>
 
@@ -468,7 +471,7 @@
 							Kunstverein</b>, Germany <br>
 						<br><b>2017</b><br>
 						<a id=show target="_blank" href="http://nips4creativity.com/"> "Machine Learning for Creativity
-							and Design" (Online Exhibition)</a>, <b>NIPS 2017</b>, Long Beach, USA <br>
+							and Design"</a>, <b>NIPS 2017</b>, Online Exhibition<br>
 						<a id=show target="_blank" href="http://futureadvocacy.com/events/stars-of-ai-max-tegmark/">"
 							Stars of AI, Life 3.0 with Max Tegmark</a>, <b>Turing Lecture Theatre, Institute of
 							Technology &amp; Engineering</b>, London<br>
@@ -476,7 +479,7 @@
 							Bloomberg New Contemporaries</a>, <b>BALTIC Centre for Contemporary Art</b>, Newcastle <br>
 						<a id=show target="_blank"
 							href="http://dresdencontemporaryart.com/events/when-machines-are-dreaming-in-den-technischen-sammlungen/">
-							>when machines are dreaming<< /a>, Chaos Computer Club (CCC) Datenspuren, <b>Technische
+							>when machines are dreaming< </a>, Chaos Computer Club (CCC) Datenspuren, <b>Technische
 									Sammlungen</b>, Dresden <br>
 								<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival
 									2017: Artificial Intelligence</a>,<a id=show target="_blank"
