--- a/about.html
+++ b/about.html
@@ -303,6 +303,14 @@
 						<b>2nd - 26th June 2022</b> - <a id=show target="_blank"
 						href="https://www.getxophoto.com/en/2022-edition/artists/jake-elwes/">The Zizi Show</a>, <b>GETXOPHOTO International Image Festival</b>, Getxo, Basque Country, Spain<br>
 
+						<b>23rd - 26th June 2022</b> - <a id=show target="_blank"
+						href="https://www.forkingroom.kr/%EC%A0%84%EC%8B%9C">Canary in the Synthetisphere
+					</a>, <b> Forking Room, Ujeongguk</b>Seoul, South Korea <br>
+
+					<b>22nd Dec 2022 - 23rd June 2023</b> - <a id=show target="_blank"
+					href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter becomes mind
+				</a>, <b> Fundacion Telefonica Museum</b>Madrid, Spain <br>
+
 						<br>
 
 						<b>2021 - May 2022</b> - <a id=show target="_blank"
@@ -310,6 +318,7 @@
 							Fencurch Street,
 						</a><b>Sculpture in the City, </b>City of London’s
 						annual programme of public artworks, UK <br>
+						
 
 
 						<b>Dec 2021 - Aug 2022</b> -
