--- a/about.html
+++ b/about.html
@@ -164,13 +164,17 @@
 
 				<p style="margin-top:0px;">
 
-					Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
+
+					Jake Elwes (b.1993) is a media artist living and working in London. They studied at The Slade School of Fine Art, UCL (2013-17). Searching for poetry and narrative in the success and failures of AI systems, Jake Elwes investigates the aesthetics and ethics inherent to AI. Elwes’ practice makes use of the sophistication of machine learning, while finding illuminating qualities in its limitations. Across projects that encompass moving-image installation, sound and performance, Elwes seeks to queer datasets, demystifying and subverting predominantly cisgender and straight AI systems. While it may seem like the AI is a creative collaborator, Elwes is careful to point out that the AI has neither intentionality or agency; it is a neutral agent existing within a human framework. Their current works in the Zizi Project explore AI bias by queering datasets with drag performers which simultaneously demystify and subvert AI systems.
+
+
+					<!-- Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
 					Art, UCL (2013-17). Recent works explore their research into machine learning and artificial
 					intelligence. Their practice looks for poetry and narrative in the success and failures of these
 					systems, while also investigating and questioning the code and ethics behind them. Their current
 					works
 					in the Zizi Project explore AI bias by queering datasets with drag performers which simultaneously
-					demystify and subvert AI systems.
+					demystify and subvert AI systems. -->
 
 					<!-- Jake is an artist living and working in London. His recent works have looked
 					at machine learning and artificial intelligence research, exploring the code, philosophy and ethics
@@ -186,7 +190,7 @@
 					<br><br>Jake's work has been exhibited in museums and galleries internationally, including the ZKM,
 					Karlsruhe, Germany; TANK Museum, Shanghai; Today Art Museum, Beijing; CyFest, Venice; Edinburgh
 					Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany; New
-					Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral
+					Contemporaries 2017, UK; Ars Electronica, Austria; Victoria and Albert Museum, London; LABoral
 					Centro, Spain; Nature Morte, Delhi, India; RMIT Gallery, Australia; Centre for the Future of
 					Intelligence, UK and they have been featured on TV: ZDF aspekte (Germany) and the BBC Arts (UK).
 
@@ -305,11 +309,11 @@
 
 						<b>23rd - 26th June 2022</b> - <a id=show target="_blank"
 						href="https://www.forkingroom.kr/%EC%A0%84%EC%8B%9C">Canary in the Synthetisphere
-					</a>, <b> Forking Room, Ujeongguk</b>Seoul, South Korea <br>
+					</a>, <b> Forking Room, Ujeongguk</b>, Seoul, South Korea <br>
 
 					<b>22nd Dec 2022 - 23rd June 2023</b> - <a id=show target="_blank"
 					href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter becomes mind
-				</a>, <b> Fundacion Telefonica Museum</b>Madrid, Spain <br>
+				</a>, <b> Fundacion Telefonica Museum</b>, Madrid, Spain <br>
 
 						<br>
 
@@ -529,6 +533,25 @@
 						-->
 
 					</p>
+					<br>
+
+					<h4>Performances</h4>
+					<p>
+					<b>2022</b><br>
+					<a id=show target="_blank" href="https://www.zabludowiczcollection.com/events/view/zizi-me-performance-lecture">A Night of A.I and Drag,</a>
+					<b>Zabludowicz Collection</b>, Chalk Farm, London, UK<br>
+					Clandestine Cabaret - Zizi &amp; Me preview, <b>Above The Stag Theatre</b>, Vauxhall, London, UK<br>
+					<br>
+					<b>2021</b><br>
+					<a id=show target="_blank" href="https://gazelliarthouse.com/news/1025-jake-elwes-talk-zizi-queering-the/">Zizi &amp; Me (&amp; Jake),</a>
+					<b>Gazelli Art House</b>, Mayfair, London, UK<br>
+					The Zizi Show Preview and Launch, <b>Royal Vauxhall Tavern</b>, London, UK<br>
+
+					<!-- Zabs
+					The Royal Vauxhall Tavern
+					Gazelli
+					The Stag -->
+				</p>
 					<br>
 
 					<h4>Prizes</h4>
@@ -781,7 +804,7 @@
 						<br>
 					</p>
 
-					<h4>Published Works Referenced In</h4>
+					<h4>Publications</h4>
 					<p>
 						Rebecca Pedrazzi, (2021). <b>Possible futures</b>. Milan, Italy: Jaca Books.<br>
 						Andreas J. Hirsch, Marcus Jandl, Gerfried Stocker (2021). <b>The Practice of Art and AI</b>. Ars
@@ -862,7 +885,7 @@
 					College of Art, London.<br>
 					&emsp; talk - <a id=show target="_blank"
 						href="http://www.ada-arte.com/en/event-details/arte-e-inteligencia-artificial/"> Espacio
-						Fundación Telefónica</a>, Madrid, Italy. <a id=show target="_blank"
+						Fundación Telefónica</a>, Madrid, Spain. <a id=show target="_blank"
 						href="https://www.youtube.com/watch?v=1VuBBwuyHX8">Watch here</a><br>
 					&emsp; panel & talk - <a id=show target="_blank"
 						href="http://art-ai.dmu.ac.uk/event/keynote-jake-elwes-creative-dilemmas/">ART•AI Festival</a>,
