--- a/project-cusp.html
+++ b/project-cusp.html
@@ -131,7 +131,7 @@
 																		</a>
 																</div><br>
 																<div>
-																	<a id=show target="_blank" href="https://cdn.zabludowiczcollection.com/files/FINAL_ZC_Invites-Leaftlet_Jake-Elwes_Digital.pdf?mtime=20190325101231">
+																	<a id=show target="_blank" href="https://www.jakeelwes.com/interviews/Zabs%20Invites.pdf">
 																		<img src="images/project-cusp/in.png" style="float: left; margin-top: 0px; margin-right: 15px;" height="70px" width="70px" border="5px" alt="CUSP 2019 - Jake Elwes digital artist" /></p>
 																		<p>Interview with Jake Elwes and <br> Curator Maitreyi Maheshwari</a></p>
 																</div>
