--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
 				<p>
 					Currently represented in Europe, Middle East & Asia by:<br>
 					<b><i><a id=show target="_blank"
-								href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli</a></b>, 39
+								href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a></b>, 39
 					Dover Street, Mayfair, London </i><br>
 					+44 207 491 8816
 				</p>
