--- a/about.html
+++ b/about.html
@@ -290,6 +290,11 @@
 					<h4>Current/Upcoming Exhibtions</h4>
 					<p>
 
+
+						<b>Dec 2021 - Aug 2022</b> -
+						<a id=show target="_blank" href="https://zkm.de/"> »Biomedia«, </a>
+						<b>ZKM | Center for Art and Media </b>, Karlsruhe, Germany<br>
+
 						<b>March 2022 - July 2022</b> - <a id=show target="_blank"
 							href="https://www.zabludowiczcollection.com/exhibitions/view/among-the-machines">Among the
 							Machines,</a> <b>Zabludowicz Collection,</b> London, UK<br>
@@ -315,7 +320,6 @@
 					href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter becomes mind
 				</a>, <b> Fundacion Telefonica Museum</b>, Madrid, Spain <br>
 
-						<br>
 
 						<b>2021 - May 2022</b> - <a id=show target="_blank"
 							href="https://www.sculptureinthecity.org.uk/artworks/latent-space/">Latent Space at 120
@@ -324,10 +328,6 @@
 						annual programme of public artworks, UK <br>
 						
 
-
-						<b>Dec 2021 - Aug 2022</b> -
-						<a id=show target="_blank" href="https://zkm.de/"> »Biomedia«, </a>
-						<b>ZKM | Center for Art and Media (coming soon)</b>, Karlsruhe, Germany<br>
 
 						<b>Nov 2021 - May 2022</b> - <a id=show target="_blank"
 							href="https://www.alien.com.tw/en">Rehearsing the Future: Dance with Nonhuman</a>, <b>ALIEN
