--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -19,9 +19,9 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="https://www.jakeelwes.com/images/project-zizi-and-me.jpg">
+	<meta property="og:image" content="https://www.jakeelwes.com/zizi/images/project-zizi-and-me.jpg">
 	<meta name="twitter:site" content="@jakeelwes" />
-	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi-and-me.jpg" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/zizi/images/project-zizi-and-me.jpg" />
 
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
@@ -51,8 +51,8 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="shortcut icon" href="zizi/images/favicon.ico">
+	<link rel="apple-touch-icon" href="zizi/images/apple-touch-icon.png">
 
 	<script>
 		(function (i, s, o, g, r, a, m) {
