--- a/about.html
+++ b/about.html
@@ -165,7 +165,16 @@
 				<p style="margin-top:0px;">
 
 
-					Jake Elwes (b.1993) is a media artist living and working in London. They studied at The Slade School of Fine Art, UCL (2013-17). Searching for poetry and narrative in the success and failures of AI systems, Jake Elwes investigates the aesthetics and ethics inherent to AI. Elwes’ practice makes use of the sophistication of machine learning, while finding illuminating qualities in its limitations. Across projects that encompass moving-image installation, sound and performance, Elwes seeks to queer datasets, demystifying and subverting predominantly cisgender and straight AI systems. While it may seem like the AI is a creative collaborator, Elwes is careful to point out that the AI has neither intentionality or agency; it is a neutral agent existing within a human framework. Their current works in the Zizi Project explore AI bias by queering datasets with drag performers which simultaneously demystify and subvert AI systems.
+					Jake Elwes (b.1993) is a media artist living and working in London. They studied at The Slade School
+					of Fine Art, UCL (2013-17). Searching for poetry and narrative in the success and failures of AI
+					systems, Jake Elwes investigates the aesthetics and ethics inherent to AI. Elwes’ practice makes use
+					of the sophistication of machine learning, while finding illuminating qualities in its limitations.
+					Across projects that encompass moving-image installation, sound and performance, Elwes seeks to
+					queer datasets, demystifying and subverting predominantly cisgender and straight AI systems. While
+					it may seem like the AI is a creative collaborator, Elwes is careful to point out that the AI has
+					neither intentionality or agency; it is a neutral agent existing within a human framework. Their
+					current works in the Zizi Project explore AI bias by queering datasets with drag performers which
+					simultaneously demystify and subvert AI systems.
 
 
 					<!-- Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
@@ -199,7 +208,8 @@
 				<p>
 					Currently represented in Europe, Middle East & Asia by:<br>
 					<b><i><a id=show target="_blank"
-								href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art House</a></b>, 39
+								href="https://gazelliarthouse.com/artists/jake-elwes/overview/">Gazelli Art
+								House</a></b>, 39
 					Dover Street, Mayfair, London </i><br>
 					+44 207 491 8816
 				</p>
@@ -310,15 +320,17 @@
 						France<br>
 
 						<b>2nd - 26th June 2022</b> - <a id=show target="_blank"
-						href="https://www.getxophoto.com/en/2022-edition/artists/jake-elwes/">The Zizi Show</a>, <b>GETXOPHOTO International Image Festival</b>, Getxo, Basque Country, Spain<br>
+							href="https://www.getxophoto.com/en/2022-edition/artists/jake-elwes/">The Zizi Show</a>,
+						<b>GETXOPHOTO International Image Festival</b>, Getxo, Basque Country, Spain<br>
 
 						<b>23rd - 26th June 2022</b> - <a id=show target="_blank"
-						href="https://www.forkingroom.kr/%EC%A0%84%EC%8B%9C">Canary in the Synthetisphere
-					</a>, <b> Forking Room, Ujeongguk</b>, Seoul, South Korea <br>
+							href="https://www.forkingroom.kr/%EC%A0%84%EC%8B%9C">Canary in the Synthetisphere
+						</a>, <b> Forking Room, Ujeongguk</b>, Seoul, South Korea <br>
 
-					<b>22nd Dec 2022 - 23rd June 2023</b> - <a id=show target="_blank"
-					href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter becomes mind
-				</a>, <b> Fundacion Telefonica Museum</b>, Madrid, Spain <br>
+						<b>22nd Dec 2022 - 23rd June 2023</b> - <a id=show target="_blank"
+							href="https://www.cccb.org/en/exhibitions/file/brains/237851">Brains. When matter becomes
+							mind
+						</a>, <b> Fundacion Telefonica Museum</b>, Madrid, Spain <br>
 
 
 						<b>2021 - May 2022</b> - <a id=show target="_blank"
@@ -326,7 +338,7 @@
 							Fencurch Street,
 						</a><b>Sculpture in the City, </b>City of London’s
 						annual programme of public artworks, UK <br>
-						
+
 
 
 						<b>Nov 2021 - May 2022</b> - <a id=show target="_blank"
@@ -385,8 +397,8 @@
 							Deeep Prequel</a>, <b>Lebenson Gallery, </b>
 						Shoreditch, London<br>
 						<a id=show target="_blank"
-						href="http://www.yuzmshanghai.org/lying-sophia-mocking-alexa/?lang=en">Lying Sophia and
-						Mocking Alexa</a>, <b>Yuz Museum</b>, Shanghai, China<br>
+							href="http://www.yuzmshanghai.org/lying-sophia-mocking-alexa/?lang=en">Lying Sophia and
+							Mocking Alexa</a>, <b>Yuz Museum</b>, Shanghai, China<br>
 						<br>
 						<b>2020</b><br>
 						<a id=show target="_blank" href="https://twitter.com/ITU_AIForGood"> AI for Good: Visions of a
@@ -537,25 +549,32 @@
 
 					<h4>Performances</h4>
 					<p>
-					<b>2022</b><br>
-					<a id=show target="_blank" href="https://www.zabludowiczcollection.com/events/view/zizi-me-performance-lecture">A Night of A.I and Drag,</a>
-					<b>Zabludowicz Collection</b>, Chalk Farm, London, UK<br>
-					Clandestine Cabaret - Zizi &amp; Me preview, <b>Above The Stag Theatre</b>, Vauxhall, London, UK<br>
-					<br>
-					<b>2021</b><br>
-					<a id=show target="_blank" href="https://gazelliarthouse.com/news/1025-jake-elwes-talk-zizi-queering-the/">Zizi &amp; Me (&amp; Jake),</a>
-					<b>Gazelli Art House</b>, Mayfair, London, UK<br>
-					The Zizi Show Preview and Launch, <b>Royal Vauxhall Tavern</b>, London, UK<br>
+						<b>2022</b><br>
+						<a id=show target="_blank"
+							href="https://www.zabludowiczcollection.com/events/view/zizi-me-performance-lecture">A Night
+							of A.I and Drag,</a>
+						<b>Zabludowicz Collection</b>, Chalk Farm, London, UK<br>
+						Clandestine Cabaret - Zizi &amp; Me preview, <b>Above The Stag Theatre</b>, Vauxhall, London,
+						UK<br>
+						<br>
+						<b>2021</b><br>
+						<a id=show target="_blank"
+							href="https://gazelliarthouse.com/news/1025-jake-elwes-talk-zizi-queering-the/">Zizi &amp;
+							Me (&amp; Jake),</a>
+						<b>Gazelli Art House</b>, Mayfair, London, UK<br>
+						The Zizi Show Preview and Launch, <b>Royal Vauxhall Tavern</b>, London, UK<br>
 
-					<!-- Zabs
+						<!-- Zabs
 					The Royal Vauxhall Tavern
 					Gazelli
 					The Stag -->
-				</p>
+					</p>
 					<br>
 
 					<h4>Prizes</h4>
 					<p>
+						<b>Prix Ars Electronica - Interactive Art + (Honorary Mention), 2022; <br></b>
+
 						<b>AI Newcomer Award, <a id=show target="_blank"
 								href="https://kicamp.org/ki-newcomerinnen/kandidatinnen">Art Category,</a>
 						</b> 2021 - German Informatics Society e.V. (GI) and the German Federal
@@ -806,10 +825,24 @@
 
 					<h4>Publications</h4>
 					<p>
+
+						Drew Hemment, Martin Zeilinger, Matjaz Vidmar, Jake Elwes (2022), Towards a heuristic model for
+						experiential AI in ‘The Zizi Show’. Edinburgh Futures Institute <br>
+
+						Owen Perry (2021). The Zizi Show, Volupté: Interdisciplinary Journal of Decadence Studies.
+						Goldsmiths, London<br>
+
+						Anne Ploin, Eynon, R., Hjorth I. & Osborne, M.A. (2022). AI and the Arts: How Machine Learning
+						is Changing Artistic Work.. Oxford Internet Institute, University of Oxford, UK<br>
+
+
 						Rebecca Pedrazzi, (2021). <b>Possible futures</b>. Milan, Italy: Jaca Books.<br>
+
 						Andreas J. Hirsch, Marcus Jandl, Gerfried Stocker (2021). <b>The Practice of Art and AI</b>. Ars
 						Electronica, Austria: Hantje Cantz Verlag.<br>
+
 						Simone Chen (2021). <b>IDEAT 理想家 - The Book of Sand</b>. Shanghai: IDEAT Publishers<br>
+						
 						Marcus Jandl, Gerfried Stocker (2021). <b>A New Digital Deal</b>. Ars Electronica, Austria:
 						Hantje Cantz Verlag.<br>
 
