--- a/index.html
+++ b/index.html
@@ -138,47 +138,21 @@
 	</section><!-- // section#header -->
 
 
-
-
 	<section id="works" class="">
 		<div class="container">
 
-			<a href="project-zizi-show.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
-
-						<h3>The Zizi Show</h3>
-			</a>
-
-			<span style="display:block" class="category">interactive performance, 2020 - <a style="white-space:nowrap" id="show"
-					target="_blank" href="https://zizi.ai">visit zizi.ai</a></span>
-		</div>
-		</div>
-
-		<a href="project-zizi-and-me.html" class="permalink">
+		<a href="zizi.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
 				<div class="item">
-					<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Zizi & Me</h3>
-					<span class="category">performance collaboration, 2020 (ongoing)</span>
+					<img src="images/project-zizi-show.jpg" alt="Jake Elwes digital artist" />
+					<div style="background-color: #ddd; padding-top: 10px; margin-top: -10px; box-shadow: 0px -2px 2px #ddd;
+					">
+					<h3>The Zizi Project - Deepfake Drag</h3>
+					<span class="category">collection of works, 2019-present</span>
+				</div>
 				</div>
 			</div>
 		</a>
-
-		<a href="project-zizi-2019.html" class="permalink">
-			<div class="desktop-4 tablet-6 columns">
-				<div class="item">
-					<img src="images/project-zizi19.jpg" alt="Jake Elwes digital artist" />
-
-					<h3>Zizi - Queering the Dataset</h3>
-					<span class="category">video, 2019</span>
-				</div>
-			</div>
-		</a>
-
-		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-cusp.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -202,6 +176,7 @@
 			</div>
 		</a>
 
+		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-closedLoop.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -214,10 +189,6 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-
-		<div class="clear hide-under-tablet"></div>
-
-
 		<a href="project-latentSpace.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
 				<div class="item">
@@ -228,7 +199,6 @@
 				</div><!-- // .item -->
 			</div><!-- // .desktop-4 -->
 		</a>
-
 
 		<a href="project-DaDaTa.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -241,9 +211,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-
-
-
+		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-digitalWhisper.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -256,9 +224,6 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-		<div class="clear hide-under-tablet"></div>
-
-
 		<a href="project-AutoEncodedBuddha.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
 				<div class="item">
@@ -269,8 +234,6 @@
 				</div><!-- // .item -->
 			</div><!-- // .desktop-4 -->
 		</a>
-
-
 
 		<a href="project-MLPorn.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -283,7 +246,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-
+		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-digitalTouch.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -296,9 +259,6 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
-		<div class="clear hide-under-tablet"></div>
-
-
 		<a href="project-circuit.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
 				<div class="item">
@@ -309,8 +269,6 @@
 				</div><!-- // .item -->
 			</div><!-- // .desktop-4 -->
 		</a>
-
-
 
 		<a href="project-iPhoneTouch.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
@@ -323,6 +281,7 @@
 			</div><!-- // .desktop-4 -->
 		</a>
 
+		<div class="clear hide-under-tablet"></div>
 
 
 		<a href="project-pornCircles.html" class="permalink">
@@ -335,8 +294,6 @@
 				</div><!-- // .item -->
 			</div><!-- // .desktop-4 -->
 		</a>
-
-		<div class="clear hide-under-tablet"></div>
 
 		<a href="project-lineForWalk.html" class="permalink">
 			<div class="desktop-4 tablet-6 columns">
