--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -19,9 +19,9 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="https://www.jakeelwes.com/images/project-zizi19.jpg">
+	<meta property="og:image" content="https://www.jakeelwes.com/zizi/images/project-zizi19.jpg">
 	<meta name="twitter:site" content="@jakeelwes" />
-	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi19.jpg" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/zizi/images/project-zizi19.jpg" />
 
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
@@ -51,8 +51,8 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="shortcut icon" href="zizi/images/favicon.ico">
+	<link rel="apple-touch-icon" href="zizi/images/apple-touch-icon.png">
 
 	<script>
 		(function (i, s, o, g, r, a, m) {
@@ -101,7 +101,7 @@
 								‘Zizi - Queering the Dataset’ aims to tackle the lack of representation and diversity in
 								the training datasets often used by facial recognition systems. The video was made by
 								disrupting these systems<small>*</small> and re-training them with the
-								addition of 1000 images of drag and gender fluid faces found online. This causes the weights inside the
+								addition of 1000 zizi/images of drag and gender fluid faces found online. This causes the weights inside the
 								neural network to shift away from the normative identities it was originally trained on
 								and into a space of queerness. ‘Zizi - Queering The Dataset’ lets us peek inside the
 								machine learning system and visualise what the neural network has (and hasn’t) learnt.
@@ -181,19 +181,19 @@
 				<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
 				<br><br>
 
-				<img src="images/project-zizi19/Edinburgh.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
-				<!-- <img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; "
+				<img src="zizi/images/project-zizi19/Edinburgh.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<!-- <img src="zizi/images/project-zizi19/ZiziFace.jpg" style="width:36%; "
 					alt="CUSP 2019 - Jake Elwes digital artist" /> -->
 				<br><small>7-channel installation at Inspace City Screen, Edinburgh Fringe Festival 2019</small>
 				<br>
-				<img src="images/project-zizi19/Screen1.jpg" style="width:49%; "
+				<img src="zizi/images/project-zizi19/Screen1.jpg" style="width:49%; "
 					alt="CUSP 2019 - Jake Elwes digital artist" />
-				<img src="images/project-zizi19/Screen2.jpg" style="width:49%; "
+				<img src="zizi/images/project-zizi19/Screen2.jpg" style="width:49%; "
 					alt="CUSP 2019 - Jake Elwes digital artist" />
 				<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
 				<br>
 
-				<img src="images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
+				<img src="zizi/images/project-zizi19/3zizis.jpg" alt="CUSP 2019 - Jake Elwes digital artist" />
 				<br><small>Zizi: Queering the Dataset 2019, 3-channels</small>
 				<br>
 
