--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -19,9 +19,9 @@
 	================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="https://www.jakeelwes.com/images/project-zizi-show.jpg">
+	<meta property="og:image" content="https://www.jakeelwes.com/zizi/images/project-zizi-show.jpg">
 	<meta name="twitter:site" content="@jakeelwes" />
-	<meta name="twitter:image" content="https://www.jakeelwes.com/images/project-zizi-show.jpg" />
+	<meta name="twitter:image" content="https://www.jakeelwes.com/zizi/images/project-zizi-show.jpg" />
 
 	<!-- CSS Files
 	* cssreset-min.css 			- CSS reset
@@ -51,8 +51,8 @@
 
 	<!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="shortcut icon" href="zizi/images/favicon.ico">
+	<link rel="apple-touch-icon" href="zizi/images/apple-touch-icon.png">
 
 	<script>
 		(function (i, s, o, g, r, a, m) {
@@ -252,7 +252,7 @@
 
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img 
-						src="images/project-zizi-show/amalgams.jpg" style="width:100%;  border-radius: 25px;"
+						src="zizi/images/project-zizi-show/amalgams.jpg" style="width:100%;  border-radius: 25px;"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 				<br><br>
 
@@ -263,18 +263,18 @@
 					<small>Making of The Zizi Show - Jake Elwes discusses Deepfake Drag</small><br><br>
 
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/controls.jpg"
+				<a id="show" target="_blank" href="https://zizi.ai/"><img src="zizi/images/project-zizi-show/controls.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
-				<a id="show" target="_blank" href="https://zizi.ai/"><img src="images/project-zizi-show/panel.jpg"
+				<a id="show" target="_blank" href="https://zizi.ai/"><img src="zizi/images/project-zizi-show/panel.jpg"
 						style="width:49%;margin-top:0px" alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
-						src="images/project-zizi-show/full-browser.jpg" style="width:49%;margin-top:0px"
+						src="zizi/images/project-zizi-show/full-browser.jpg" style="width:49%;margin-top:0px"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<a id="show" target="_blank" href="https://zizi.ai/"><img
-						src="images/project-zizi-show/close-browser.jpg" style="width:49%;margin-top:0px"
+						src="zizi/images/project-zizi-show/close-browser.jpg" style="width:49%;margin-top:0px"
 						alt="The Zizi Show 2020 - Jake Elwes digital artist" /></a>
 
 				<br><small>The Zizi Show (2020), stills from zizi.ai</small><br><br>
@@ -290,11 +290,11 @@
 				<small>The Zizi Show - I Am What I Am (performed by ME the Drag Queen)</small><br>
 
 
-				<img src="images/project-zizi-show/banner.jpg" style="width:100%; "
+				<img src="zizi/images/project-zizi-show/banner.jpg" style="width:100%; "
 					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
 				<br><small>The Zizi Show (2020), concept art</small>
 
-				<img src="images/project-zizi-show/lilly-snatchdragon-training.jpg" style="width:100%; "
+				<img src="zizi/images/project-zizi-show/lilly-snatchdragon-training.jpg" style="width:100%; "
 					alt="The Zizi Show 2020 - Jake Elwes digital artist" />
 				<br><small>The Zizi Show (2020), montage of a deepfake training on drag queen Lilly Snatchdragon</small>
 				<br><br>
